# CookBook

./: .dockerignore  .env  .gitignore  Cargo.toml  build.rs  db.sqlite  dockerfile  makefile  todo.md
backend/: .env_template  .gitignore  Cargo.toml  api_docs.yaml  asd  graphs.drawio
backend/migrations/2023-11-14-233125_init/: down.sql  up.sql
backend/src/: db.rs  macros.rs  main.rs  models.rs  schema.rs  setup.rs  unwrap_pretty.rs  validating.rs
backend/src/api/: mod.rs
backend/src/api/api_v1/: auth_endpoint.rs  me_endpoint.rs  mod.rs
backend/src/auth/: jwt.rs  mod.rs
migrations/1_init/: down.sql  up.sql
migrations/2_insert_ingredients/: down.sql  up.sql
src/: app.rs  auth.rs  cdn.rs  lib.rs  main.rs  schema.rs
src/api/: auth.rs  img.rs  ingredients.rs  mod.rs
src/api/recipes/: mod.rs  models.rs
src/md_parser/: mod.rs  spec.md
src/pages/: admin.rs  home.rs  mod.rs  not_found.rs  view_recipe.rs
src/pages/admin/: create_recipe.rs  delete_recipe.rs  ingredients.rs  mod.rs
src/pages/admin/images/: delete_image.rs  mod.rs  upload_image.rs
style/: main.scss
