[package]
name = "cook-book"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6.5", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
actix-multipart = { version = "0.6.1", optional = true }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_actix = { version = "0.6", optional = true }
leptos_router = { version = "0.6", features = ["nightly"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled", "bundled-windows"], optional = true }
wasm-bindgen = "=0.2.92"
diesel = { version = "2.1.6", features = ["libsqlite3-sys", "sqlite", "32-column-tables", "r2d2", "without-deprecated"], default-features = false, optional = true }
dotenv = { version = "0.15.0", optional = true }
serde = "1.0.200"
serde_repr = "0.1.19"
ciborium = "0.2.2"
web-sys = { version = "0.3.69", features = ["File", "FileList", "HtmlInputElement", "KeyboardEvent", "Window"] }
chrono = { version = "0.4.38", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
rand = { version = "0.8.5" }
image = "0.25.1"
reqwasm = { version = "0.5.0", optional = true }
server_fn = { version = "0.6.11", features = ["multipart"] }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "reqwasm"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "reqwasm"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:actix-multipart",
  "dep:chrono",
  "dep:diesel",
  "dep:dotenv",
  "dep:leptos_actix",
  "dep:libsqlite3-sys",
  "dep:jsonwebtoken",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
reqwasm = ["dep:reqwasm"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "cook-book"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
