[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 4

[dev-dependencies]
diesel_cli = { version = "2.1.1", features = ["sqlite"] }

[features]
ssl = [ "openssl", "actix-web/openssl" ]

[dependencies]
actix-web = { version = "4.4.0", features = ["secure-cookies"] }
openssl = { version = "0.10.60", features = ["vendored"], optional = true }
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenv = "0.15.0"
include_dir = "0.7.3"
argon2 = "0.5.2"
lazy_static = "1.4.0"
jsonwebtoken = "9.1.0"
serde = {version = "1.0.193", features = ["derive"] }
rpassword = "7.3.1"
constcat = "0.4.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
